--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -139,3 +139,11 @@ tail_includes:
   </div><!-- .post-tail-bottom -->
 
 </div><!-- div.post-tail-wrapper -->
+
+<script src="https://utteranc.es/client.js"
+  repo="gitryk/gitryk.github.io"
+  issue-term="title"
+  theme="github-dark"
+  crossorigin="anonymous"
+  async>
+</script>
